# kid3

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  .kid3-cd.yml  AUTHORS  CMakeLists.txt  CMakeLists.txt.root  ChangeLog  Doxyfile  GccPchMacros.cmake  INSTALL  Messages.sh  README  build-deb.sh  build.sh  buildlibs.sh  config.h.cmake  kid3.lsm  kid3.spec  snapcraft.yaml  strip_silent.sh.in
doc/: CMakeLists.txt  Makefile.am  download-pos.cmake  download-pos.sh  extract-merge.sh  fixdocbook.py  fixhtml.pl  fixhtml.py  fixmandocbook.pl  fixmandocbook.py  fromkdoctools.ent
doc/de/: CMakeLists.txt  index.docbook
doc/docs/ca/: index.docbook
doc/docs/de/: index.docbook
doc/docs/it/: index.docbook
doc/docs/nl/: index.docbook
doc/docs/pt/: index.docbook
doc/docs/ru/: index.docbook
doc/docs/sv/: index.docbook
doc/docs/uk/: index.docbook
doc/en/: CMakeLists.txt  Makefile.am  index.docbook
doc/po/: kid3.pot
doc/po/ca/: kid3.po
doc/po/de/: kid3.po
doc/po/it/: kid3.po
doc/po/nl/: kid3.po
doc/po/pt/: kid3.po
doc/po/ru/: kid3.po
doc/po/sv/: kid3.po
doc/po/uk/: kid3.po
kid3/: CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.am.in  Makefile.in  README  VERSION  acinclude.m4  aclocal.m4  amazonclient.cpp  amazonclient.h  amazonconfig.cpp  amazonconfig.h  amazondialog.cpp  amazondialog.h  amazonimporter.cpp  amazonimporter.h  attributedata.cpp  attributedata.h  audioplayer.cpp  browsecoverartdialog.cpp  browsecoverartdialog.h  browserdialog.cpp  browserdialog.h  build-deb-kde3.sh  build-deb-kde4.sh  build-deb-qt.sh  build-deb.sh  buildlibs.sh  comboboxdelegate.cpp  comboboxdelegate.h  commandstable.cpp  commandstable.h  commandstablemodel.cpp  commandstablemodel.h  config.h.cmake  (+216 more)
kid3/admin/: Makefile  Makefile.in  acinclude.m4.in  am_edit  configure.in.min  cvs.sh  libtool.m4.in
kid3/deb/: changelog  control  copyright  kid3-kde3.mk  kid3-kde4.mk  kid3-qt.1  kid3-qt3.mk  kid3-qt4.mk  kid3.1  kid3.mk  rules
kid3/deb-kde3/: control  kid3-kde4.manpages  kid3-qt.mk  rules
kid3/deb-kde4/: control  kid3-kde4.1  rules
kid3/deb-kde4/cdbs/: control.mk  dh_sameversiondeps  kde.mk  utils.mk  versions.mk
kid3/deb-qt/: changelog  control  rules
kid3/debian/: changelog  control  copyright  kid3-qt.1  kid3-qt.manpages  kid3.1  manpages  rules  watch
kid3/doc/: CMakeLists.txt  Makefile.am  Makefile.in  doc.pri  fixdocbook.pl
kid3/doc/de/: CMakeLists.txt  Makefile.am  Makefile.in  de.pro  index.docbook
kid3/doc/en/: CMakeLists.txt  Makefile.am  Makefile.in  index.docbook
kid3/kid3/: CMakeLists.txt  Makefile.am  Makefile.in  amazonconfig.cpp  amazonconfig.h  amazondialog.cpp  attributedata.cpp  attributedata.h  browsecoverartdialog.cpp  browsecoverartdialog.h  browserdialog.cpp  browserdialog.h  commandstable.cpp  commandstable.h  config.mk  configdialog.cpp  configdialog.h  configtable.h  de_qt.po  dirinfo.h  dirlist.cpp  dirlist.h  discogsclient.cpp  discogsclient.h  discogsconfig.cpp  discogsconfig.h  discogsdialog.cpp  discogsdialog.h  downloaddialog.cpp  downloaddialog.h  editframedialog.h  editframefieldsdialog.cpp  editframefieldsdialog.h  es_qt.po  et_qt.po  exportdialog.cpp  exportdialog.h  expressionparser.cpp  expressionparser.h  externalprocess.cpp  (+138 more)
kid3/kid3-qt/: config.h.in  config.pri.in  configure-kid3-qt.pl  configure.in
kid3/kid3/taglibext/: CMakeLists.txt  Makefile.am  generalencapsulatedobjectframe.cpp  taglibext.pro  urllinkframe.cpp  urllinkframe.h
kid3/macosx/: buildkid3.sh  createpkg.sh  kid3.icns
kid3/po/: CMakeLists.txt  Makefile.in  cs.po  de.po  es.po  et.po  extract-merge.sh  fi.po  fr.po  it.po  kid3.pot  nl.po  pl.po  po.pro  po2ts.pl  ru.po  tr.po  zh_TW.po
kid3/po/de/: kid3.po  kid3qt.po
kid3/taglibext/: unsynchronizedlyricsframe.cpp
kid3/taglibext/speex/: speexproperties.cpp
kid3/taglibext/trueaudio/: taglib_trueaudiofiletyperesolver.cpp  ttafile.cpp  ttaproperties.h
kid3/taglibext/wavpack/: wvfile.h
kid3/win32/: buildkid3.bat  config.mk  createpkg.bat  kid3.dsp  kid3.dsw  kid3.pro  kid3.vcproj  kid3win.rc
po/: CMakeLists.txt  cs.po  da.po  de.po  en.po  es.po  et.po  extract-merge.sh  fi.po  fr.po  it.po  kid3.pot  nl.po  pl.po  po.pro  po2ts.pl  po2ts.py  ru.po  sr.po  sr@ijekavian.po  sr@ijekavianlatin.po  sr@latin.po  tr.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt
src/app/: CMakeLists.txt  hisc-apps-kid3.svgz  kid3.appdata.xml  kid3.desktop  org.kde.kid3.appdata.xml  org.kde.kid3.desktop
src/app/cli/: CMakeLists.txt  abstractcli.cpp  abstractcli.h  abstractcliformatter.cpp  abstractcliformatter.h  clicommand.cpp  clicommand.h  cliconfig.h.cmake  clierror.h  jsoncliformatter.cpp  jsoncliformatter.h  kid3cli.cpp  kid3cli.h  maincli.cpp  readlinecompleter.cpp  readlinecompleter.h  standardinputreader.cpp  standardinputreader.h  standardiohandler.cpp  standardiohandler.h  textcliformatter.cpp  textcliformatter.h
src/app/kde/: CMakeLists.txt  kdeconfigdialog.cpp  kdeconfigdialog.h  kdemainwindow.cpp  kdemainwindow.h  kdeplatformtools.cpp  kdeplatformtools.h  kdesettings.cpp  kdesettings.h  kid3ui.rc  mainkde.cpp
src/app/qml/: AbstractSettingsPage.qml  ActionSelectionDelegate.qml  ApplicationRectangle.qml  BatchImportPage.qml  CMakeLists.txt  ComboBox.qml  (+35 more)
src/core/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/plugins/: CMakeLists.txt  importplugins.h.cmake
src/qml/: CMakeLists.txt
src/test/: CMakeLists.txt  dummysettings.cpp  dummysettings.h  kid3testsupport.py  main.cpp  maintest.cpp  test_cli_functions.py  testamazonimporter.cpp  testamazonimporter.h  testdiscogsimporter.cpp  testdiscogsimporter.h  testdiscogsimportparser.cpp  testdiscogsimportparser.h  testjsonparser.cpp  testjsonparser.h  testmusicbrainzreleaseimporter.cpp  testmusicbrainzreleaseimporter.h  testmusicbrainzreleaseimportparser.cpp  testmusicbrainzreleaseimportparser.h  testserverimporterbase.cpp  testserverimporterbase.h  testutils.cpp  testutils.h
translations/: CMakeLists.txt  download-pos.cmake  download-pos.sh  extract-merge.sh  po2ts.py
translations/po/: kid3_qt.pot
(+888 files in other folders)
